--- a/client/src/components/GamesList/index.module.scss
+++ b/client/src/components/GamesList/index.module.scss
@@ -10,6 +10,7 @@
   height: 100%;
   width: 100%;
   margin-top: 75px;
+  margin-bottom: 75px;
 
   @include devices(xs) {
     flex-direction: column-reverse;
